--- a/.github/workflows/build-many.yml
+++ b/.github/workflows/build-many.yml
@@ -62,4 +62,7 @@ jobs:
         run: go get
 
       - name: Build
-        run: make build
+        run: make release
+
+      - name: Show binary
+        run: ls -lash list-github-stars
