--- a/.github/workflows/build-many.yml
+++ b/.github/workflows/build-many.yml
@@ -68,7 +68,14 @@ jobs:
           if [ "${{ matrix.os }}" = "windows-latest" ]; then choco install upx; fi
 
       - name: Build
-        run: make release
+        run: |
+          make release
+          mkdir artifact
+          mv list-github-stars* artifact
 
-      - name: Show binary
-        run: ls -lash list-github-stars
+      - name: Upload artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: artifact-${{ github.sha }}-${{ matrix.os }}
+          path: artifact
+          retention-days: 1
