--- a/.github/workflows/build-many.yml
+++ b/.github/workflows/build-many.yml
@@ -76,6 +76,6 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
-          name: artifact-${{ github.sha }}-${{ env.RUNNER_OS }}
+          name: artifact-${{ github.sha }}-${{ matrix.os }}
           path: artifact
           retention-days: 1
