ci: build and test on docker

--- a/.github/workflows/build-many.yml
+++ b/.github/workflows/build-many.yml
@@ -79,3 +79,14 @@ jobs:
           name: artifact-${{ github.sha }}-${{ matrix.os }}
           path: artifact
           retention-days: 1
+
+  docker:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Build image
+        run: docker build -t list-github-stars .
