--- a/.github/workflows/test-many.yml
+++ b/.github/workflows/test-many.yml
@@ -73,3 +73,27 @@ jobs:
           sha: ${{ github.sha }}
           os: windows-latest
           github-token: ${{ secrets.AUTH_TOKEN }}
+
+  # ..........................................................................
+  on-docker:
+    runs-on: ubuntu-latest
+    needs: on-windows
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Build image
+        run: docker build -t list-github-stars .
+
+      - name: Run and update
+        run: |
+          docker run \
+            --rm \
+            -e GITHUB_TOKEN="$GITHUB_TOKEN" \
+            list-github-stars >> my-github-stars.md
+
+          gh gist edit ada2117bd8c73a1e94e49580fd5c7cf7 --add my-github-stars.md
+        env:
+          GITHUB_TOKEN: ${{ inputs.github-token }}
