--- a/.github/workflows/test-many.yml
+++ b/.github/workflows/test-many.yml
@@ -96,4 +96,4 @@ jobs:
 
           gh gist edit ada2117bd8c73a1e94e49580fd5c7cf7 --add my-github-stars.md
         env:
-          GITHUB_TOKEN: ${{ inputs.github-token }}
+          GITHUB_TOKEN: ${{ secrets.AUTH_TOKEN }}
