--- a/.github/workflows/test-many.yml
+++ b/.github/workflows/test-many.yml
@@ -6,11 +6,11 @@ on:
       - master
     paths-ignore:
       - "**.md"
-  pull_request:
-    branches:
-      - "*"
-    paths-ignore:
-      - "**.md"
+# pull_request:
+#   branches:
+#     - "*"
+#   paths-ignore:
+#     - "**.md"
 
 defaults:
   run:
