--- a/.github/workflows/release-many.yml
+++ b/.github/workflows/release-many.yml
@@ -8,8 +8,20 @@ on:
       - "**.md"
 
 jobs:
+  wait-build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Wait for build to finish
+        uses: lewagon/wait-on-check-action@v1.1.1
+        with:
+          ref: ${{ github.sha }}
+          repo-token: ${{ secrets.AUTH_TOKEN }}
+          wait-interval: 20
+          running-workflow-name: wait-build
+
   release-many:
     runs-on: ubuntu-latest
+    needs: wait-build
     steps:
       - name: Wait for build to finish
         uses: lewagon/wait-on-check-action@v1.1.1
