--- a/.github/workflows/release-many.yml
+++ b/.github/workflows/release-many.yml
@@ -14,23 +14,15 @@ jobs:
       - name: Wait for build to finish
         uses: lewagon/wait-on-check-action@v1.1.1
         with:
-          ref: ${{ github.sha }}
+          ref: ${{ github.event.pull_request.head.sha }}
           repo-token: ${{ secrets.AUTH_TOKEN }}
-          wait-interval: 20
+          wait-interval: 10
           running-workflow-name: wait-build
 
   release-many:
     runs-on: ubuntu-latest
     needs: wait-build
     steps:
-      - name: Wait for build to finish
-        uses: lewagon/wait-on-check-action@v1.1.1
-        with:
-          ref: ${{ github.sha }}
-          repo-token: ${{ secrets.AUTH_TOKEN }}
-          wait-interval: 20
-          running-workflow-name: wait-build
-
       - name: Download linux artifact
         uses: dawidd6/action-download-artifact@v2
         with:
