--- a/.github/workflows/test-many.yml
+++ b/.github/workflows/test-many.yml
@@ -1,16 +1,11 @@
 name: test-many
 
 on:
-  push:
+  pull_request:
     branches:
-      - master
+      - "*"
     paths-ignore:
       - "**.md"
-# pull_request:
-#   branches:
-#     - "*"
-#   paths-ignore:
-#     - "**.md"
 
 defaults:
   run:
@@ -24,7 +19,7 @@ jobs:
       - name: Wait for build to finish
         uses: lewagon/wait-on-check-action@v1.1.1
         with:
-          ref: ${{ github.sha }}
+          ref: ${{ github.event.pull_request.head.sha }}
           repo-token: ${{ secrets.AUTH_TOKEN }}
           wait-interval: 20
           running-workflow-name: wait-build
