--- a/.github/workflows/test-many.yml
+++ b/.github/workflows/test-many.yml
@@ -1,11 +1,6 @@
 name: test-many
 
 on:
-  push:
-    branches:
-      - master
-    paths-ignore:
-      - "**.md"
   pull_request:
     branches:
       - "*"
@@ -24,10 +19,11 @@ jobs:
       - name: Wait for build to finish
         uses: lewagon/wait-on-check-action@v1.1.1
         with:
-          ref: ${{ github.sha }}
+          ref: ${{ github.event.pull_request.head.sha }}
           repo-token: ${{ secrets.AUTH_TOKEN }}
           wait-interval: 20
           running-workflow-name: wait-build
+          allowed-conclusions: success,skipped,neutral
 
   # ..........................................................................
   on-linux:
