--- a/.github/workflows/build-many.yml
+++ b/.github/workflows/build-many.yml
@@ -2,10 +2,12 @@ name: build-many
 
 on:
   push:
-    tags: v[0-9]+.[0-9]+.[0-9]+
+    tags:
+      - 'v[0-9]+.[0-9]+.[0-9]+'
 
   pull_request:
-    branches: '*'
+    branches: 
+      - '*'
 
 jobs:
   multi-os:
