--- a/.github/workflows/release-many.yml
+++ b/.github/workflows/release-many.yml
@@ -2,7 +2,8 @@ name: release-many
 
 on:
   push:
-    tags: v[0-9]+.[0-9]+.[0-9]+
+    tags:
+      - 'v[0-9]+.[0-9]+.[0-9]+'
 
 jobs:
   wait-build:
