--- a/.github/workflows/build-many.yml
+++ b/.github/workflows/build-many.yml
@@ -6,7 +6,7 @@ on:
       - 'v[0-9]+.[0-9]+.[0-9]+'
 
   pull_request:
-    branches: 
+    branches:
       - '*'
 
 jobs:
@@ -30,7 +30,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: 1.19.x
+          go-version: 1.22.x
 
       - name: Cache Go packages
         id: cache-go-pkgs
@@ -54,17 +54,11 @@ jobs:
         if: steps.cache-go-pkgs.outputs.cache-hit != 'true'
         run: go get
 
-      - name: Pre-build steps
-        run: |
-          if [ "${{ matrix.os }}" = "ubuntu-latest" ];  then sudo apt-get install -y upx; fi
-          if [ "${{ matrix.os }}" = "macos-latest" ];   then brew install upx; fi
-          if [ "${{ matrix.os }}" = "windows-latest" ]; then choco install upx; fi
-
       - name: Build
         run: |
           make release
           mkdir artifact
-          mv list-github-stars* artifact
+          mv lgs* artifact
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
@@ -82,4 +76,4 @@ jobs:
           fetch-depth: 0
 
       - name: Build image
-        run: docker build -t list-github-stars .
+        run: docker build -t lgs .
