ci: fix filename

--- a/.github/actions/run-test/action.yml
+++ b/.github/actions/run-test/action.yml
@@ -25,7 +25,7 @@ runs:
 
     - name: Run and update
       run: |
-        mv list-github-stars* lgs
+        mv lgs* lgs
         chmod +x lgs
 
         ./lgs >> my-github-stars.md
